frontend/test/should_fail/index_pattern_multiple_edge_missing_where_index_expected.grg
#using "index_multiple_model.gm"

rule i(ref s:set<int>) {
	-e:E{multiple(s >= 0, s <= 1)}->;
	
	modify {
	}
}
